# civitas

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Read me.txt  Readme.md  index.html  logging.conf  main.py  pyproject.toml  requirements.txt  script.js
Map and dashboard/: Interactive_map.py  Notes - todo.txt  Readme.md  SQL_CODE.sql  index.html  index_trial.html  script.js  server.py
deploy/: .terraform.lock.hcl  autoscaling.tf  backend.tf  data.tf  ecr.tf  ecs.tf  etl.Dockerfile  iam.tf  locals.tf  main.tf  networking.tf  requirements.txt  variables.tf  web.Dockerfile
deploy/tfvars/: main.tfvars
front-end code/Mapbox/: index.html  script.js
migrations/: env.py
migrations/versions/: 200e8270094c_feat_requires_maintenance.py  248ff61ccde2_feat_add_category_to_amenity.py  2c14bb9a4895_feat_update_buildings_amenities.py  50fd789492b2_feat_admin_boundaries.py  68cbf0444c24_fix_osm_id_type.py  a0cda4e6a39f_initial_migration.py  a0d563120408_feat_update_buildings_schema.py  fb77f5e3661d_fix_schema.py
src/app/: app.py  events.py
src/app/api/: __init__.py  router.py
src/app/etl/: __init__.py  app.py  etl.py
src/app/web/: __init__.py  app.py  middlewares.py  router.py
src/app/web/api/: router.py
src/pkg/adapters/overpass/: __init__.py  client.py
src/pkg/adapters/terra/: __init__.py  client.py
src/pkg/config/: __init__.py  env.py
src/pkg/infrastructure/: postgresql.py
src/pkg/models/: __init__.py  consts.py  db.py  enums.py  literals.py  models.py
src/pkg/repository/: repository.py
src/pkg/service/: service.py
(+16 files in other folders)
